Fixing some overlaping issues with navbar and Hero section

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,5 +3,4 @@
 .app {
   overflow-x: hidden;
   background: colors.$mx-primary-color;
-  position: relative;
 }
