--- a/src/pages/hero/Hero.module.scss
+++ b/src/pages/hero/Hero.module.scss
@@ -28,13 +28,13 @@
 
   &__name {
     color: colors.$mx-dark-gray;
-    font-size: clamp(40px, 8vw, 90px);
+    font-size: clamp(24px, 8vw, 90px);
   }
 
   &__position {
     color: colors.$mx-soft-green;
     opacity: 1;
-    font-size: clamp(40px, 8vw, 70px);
+    font-size: clamp(16px, 8vw, 70px);
   }
 
   &__bio {
@@ -42,24 +42,5 @@
     color: colors.$mx-dark-gray;
     font-weight: bold;
     font-size: clamp(16px, 4vw, 20px);
-  }
-
-  &__square {
-    height: 250px;
-    width: 250px;
-    rotate: 45deg;
-    border: solid 5px colors.$mx-soft-green;
-    opacity: 0.6;
-    position: absolute;
-
-    &-left {
-      left: -130px;
-      bottom: 10%;
-    }
-
-    &-right {
-      right: -130px;
-      top: 20%;
-    }
   }
 }
